--- a/project_ideas.ipynb
+++ b/project_ideas.ipynb
@@ -20,10 +20,7 @@
     "**Clients**  \n",
     "\n",
     "**Dataset** - \n",
-    "\n",
-    "**Problem solving outline**\n",
-    "\n",
-    "**Deliverables**"
+    "\n"
    ]
   },
   {
@@ -36,13 +33,9 @@
     "\n",
     "**Problem** \n",
     "\n",
-    "**Clients**  \n",
+    "**Clients**  - Teachers, school administrators\n",
     "\n",
-    "**Dataset** - [Student Performance Data Set](https://archive.ics.uci.edu/ml/datasets/student+performance)\n",
-    "\n",
-    "**Problem solving outline**\n",
-    "\n",
-    "**Deliverables**"
+    "**Dataset** - [Student Performance Data Set](https://archive.ics.uci.edu/ml/datasets/student+performance)\n"
    ]
   },
   {
@@ -51,17 +44,13 @@
    "source": [
     "### Project 3\n",
     "\n",
-    "Predict future sales from Kaggle. Learning will then be applied in my current company.\n",
+    "Predict future sales from a dataset on Kaggle. The goal is to predict product sold in the test set.\n",
     "\n",
     "**Problem** \n",
     "\n",
     "**Clients** - \n",
     "\n",
-    "**Dataset** - [Predict_Future_Sales](https://www.kaggle.com/c/competitive-data-science-predict-future-sales/data)\n",
-    "\n",
-    "**Problem solving outline**\n",
-    "\n",
-    "**Deliverables**"
+    "**Dataset** - [Predict_Future_Sales](https://www.kaggle.com/c/competitive-data-science-predict-future-sales/data)"
    ]
   },
   {
