--- a/mini_proj/frequency_stat/inferential_statistics_frequentist_mini-projects6.28.19/inferential_statistics_1a-Q6.25.ipynb
+++ b/mini_proj/frequency_stat/inferential_statistics_frequentist_mini-projects6.28.19/inferential_statistics_1a-Q6.25.ipynb
@@ -204,7 +204,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7817562955794142"
+       "0.9606195639478641"
       ]
      },
      "execution_count": 5,
@@ -213,9 +213,8 @@
     }
    ],
    "source": [
-    "\n",
     "v_list = 0\n",
-    "for i in range(4):\n",
+    "for i in range(5):\n",
     "    v_list += (sample[i]-sample_mean)**2\n",
     "\n",
     "np.sqrt(v_list/5)"
@@ -1090,12 +1089,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "955 Confidence Interval is between 164.56 and 181.00\n"
+      "95% Confidence Interval is between 164.56 and 181.00\n"
      ]
     }
    ],
    "source": [
-    "print('955 Confidence Interval is between {:.2f} and {:.2f}'.format(unknown_mean-error_margin, unknown_mean+error_margin))"
+    "print('95% Confidence Interval is between {:.2f} and {:.2f}'.format(unknown_mean-error_margin, unknown_mean+error_margin))"
    ]
   },
   {
