move 1a to a high level folder

--- a/mini_proj/frequency_stat/inferential_statistics_1a-Q6.25.ipynb
+++ b/mini_proj/frequency_stat/inferential_statistics_1a-Q6.25.ipynb
@@ -822,7 +822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ Using the [Standard Normal Distribution Table](https://www.mathsisfun.com/data/standard-normal-distribution-table.html). The probability area from 0 to 1 is 0.3413. Since the question is asking for value <1, hence it will be 0.3413 plus area for <0, which is 0.5"
    ]
   },
   {
@@ -833,7 +833,7 @@
     {
      "data": {
       "text/plain": [
-       "-34.2"
+       "0.8412999999999999"
       ]
      },
      "execution_count": 25,
@@ -842,7 +842,7 @@
     }
    ],
    "source": [
-    "(1-172)/5"
+    "0.5 + 0.3413"
    ]
   },
   {
@@ -874,7 +874,7 @@
     {
      "data": {
       "text/plain": [
-       "1.2089672527399956e-256"
+       "0.8413447460685429"
       ]
      },
      "execution_count": 26,
@@ -883,7 +883,7 @@
     }
    ],
    "source": [
-    "norm.cdf(-34.2)"
+    "norm.cdf(1)"
    ]
   },
   {
@@ -902,20 +902,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8413447460685429"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z1 = (177-172)/5\n",
     "norm.cdf(z1)"
@@ -944,20 +933,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.0717590259723409e-08"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "z2 = (200-172)/5\n",
     "1-norm.cdf(z2)"
@@ -1008,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1006,7 @@
        "172.7815108576788"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1040,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1049,7 +1027,7 @@
        "4.195424364433547"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,35 +1039,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.222880654151599"
+       "1.1629123030741193"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "error_margin = norm.ppf(.975) * unknown_std\n",
+    "error_margin = 1.96 * unknown_std/ np.sqrt(len(sample_unknown))\n",
     "error_margin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95% Confidence Interval is between 164.56 and 181.00\n"
+      "95% Confidence Interval is between 171.62 and 173.94\n"
      ]
     }
    ],
@@ -1127,35 +1105,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.431020900938286"
+       "1.1923264102757953"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_error = t.ppf((1 + .95) / 2, len(sample_unknown)-1) * unknown_std\n",
+    "t_error = t.ppf(0.975, len(sample_unknown)-1) * unknown_std/ np.sqrt(len(sample_unknown))\n",
     "t_error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "95% confident interval using t-distribution: 164.35 : 181.21\n"
+      "95% confident interval using t-distribution: 171.59 : 173.97\n"
      ]
     }
    ],
